--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
   <link rel="stylesheet" href="scss/main.css">
 </head>
 <body>
+  <header>
+    <div class="image_logo">
+      <img src="images/logo.svg" alt="logo">
+    </div>
+    <nav>
+      <a href="#">Features</a>
+      <a href="#">Team</a>
+      <a href="#">Sign in</a>
+    </nav>
+  </header>
+  <main>
 
+  </main>
+  <footer>
 
+  </footer>
 <!-- <p class="attribution">
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
   Coded by <a href="#">Your Name Here</a>.
