section hero 1 finalizada

--- a/index.html
+++ b/index.html
@@ -19,7 +19,20 @@
     </nav>
   </header>
   <main>
-
+    <section id="first_section">
+      <article>
+        <h1>All your files in one secure location, acessible anywhere.</h1>
+          <p>Fylo stores your most important files in one secure location.
+            Access them wherever your need, share and collaborate with friends, family,
+            and co-workers.
+          </p>
+            <input type="text" id="text" placeholder="Enter your email...">
+              <input type="submit" id="btn" value="Get started">
+      </article>
+      <div class="hero_image">
+        <img src="images/illustration-1.svg" alt="illustration-1">
+      </div>
+    </section>
   </main>
   <footer>
 
