access section finalizada

--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
         <img src="images/illustration-2.svg" alt="illustration-2">
       </div>
     </section>
+    <div id="access">
+      <div class="access_text">
+        <h3 data-aos="fade-right">Get early access today</h3>
+          <p data-aos="fade-right" data-aos-duration="1200">It only takes a minute to sign up and our free starter tier is extremely generous.
+            If you have any questions, our support team would be happy to help you.
+            </p>
+      </div>
+      <form action="#" data-aos="fade-left" data-aos-duration="1200">
+          <input type="text" id="input_email_two" placeholder="email@example.com">
+            <input type="submit" id="input_submit_two" value="Get Started for free">
+      </form>
+    </div>
   </main>
   <footer>
 
